@@ -3,7 +3,9 @@ package edu.colorado.phet.platetectonics.view.labels;
 import java.awt.*;
 
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.lwjglphet.nodes.GLNode;
+import edu.colorado.phet.platetectonics.PlateTectonicsConstants;
 import edu.colorado.phet.platetectonics.view.ColorMode;
 
 import static edu.colorado.phet.platetectonics.PlateTectonicsConstants.DARK_LABEL;
